--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     </div>
 
     <script defer src="./src/scripts/engine.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
